--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/google-fonts": "^3.2.0",
     "@vee-validate/nuxt": "4.14.4",
     "nuxt": "3.13.2",
     "vue": "3.5.12",
