--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/google-fonts": "^3.2.0",
+    "@nuxtjs/google-fonts": "3.2.0",
     "@vee-validate/nuxt": "4.14.4",
+    "debounce": "2.2.0",
     "nuxt": "3.13.2",
     "vue": "3.5.12",
     "vue-final-modal": "4.5.5",
